# rules_kubebuilder

./: .bazelignore  .bazelrc  .buildifier.json  .editorconfig  .gitattributes  .gitignore  .shellcheckrc  .yamlfmt.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  renovate.json  renovate.json5
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  format_check.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/cronjob-tutorial/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  container_structure.yaml  go.mod  go.sum  preset.bazelrc
e2e/cronjob-tutorial/api/v1/: BUILD.bazel  license_header.txt
e2e/cronjob-tutorial/cfg/: BUILD
e2e/cronjob-tutorial/cmd/: BUILD.bazel
e2e/cronjob-tutorial/config/: const.bzl
e2e/cronjob-tutorial/config/certmanager/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/crd/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/crd/bases/: BUILD  crds_expected.yaml
e2e/cronjob-tutorial/config/default/: BUILD  expected_kustomize_build.yaml  metrics_service_name_replacement.yaml  metrics_service_namespace_replacement.yaml  webhook_cert_name_replacement.yaml  webhook_cert_namespace_replacement.yaml  webhook_service_name_replacement.yaml  webhook_service_namespace_replacement.yaml
e2e/cronjob-tutorial/config/local/: BUILD  never_pull_patch.yaml  ns_patch.yaml
e2e/cronjob-tutorial/config/manager/: BUILD  deployment.yaml  expected_kustomize_build.yaml  ns.yaml
e2e/cronjob-tutorial/config/network-policy/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/prometheus/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/rbac/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/samples/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/config/webhook/: BUILD  expected_kustomize_build.yaml
e2e/cronjob-tutorial/internal/controller/: BUILD.bazel  cronjob_controller.go  suite_test.go
e2e/cronjob-tutorial/internal/webhook/v1/: BUILD.bazel  webhook_suite_test.go
e2e/cronjob-tutorial/test/e2e/: BUILD  e2e_suite_test.go  e2e_test.go
e2e/cronjob-tutorial/test/e2e/manager/: 00-assert.yaml  00-install.yaml  chainsaw-test.yaml
e2e/cronjob-tutorial/test/utils/: BUILD  kind.go  utils.go
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
kubebuilder/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
kubebuilder/private/: BUILD.bazel  apply.sh  chainsaw.bzl  chainsaw_test.sh  chainsaw_toolchain.bzl  configure_kustomization.sh  controller_gen.bzl  controller_gen_toolchain.bzl  docker_toolchain.bzl  envtest.bzl  envtest_releases.bzl  envtest_toolchain.bzl  expand_stamp_attrs.sh  extension_utils.bzl  kind_env.bzl  kind_env.sh  kind_toolchain.bzl  kubectl.bzl  kustomize.bzl  kuttl.bzl  kuttl.sh  kuttl_toolchain.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  utils.bzl
kubebuilder/tests/: BUILD.bazel  cert.pem  deployment.yaml  expected_config_map_logging.yaml  expected_my_secret.yaml  expected_my_tls_secret.yaml  expected_myapp.yaml  expected_myapp_versioned.yaml  expected_name_suffix.yaml  key.pem  versions_test.bzl
mylang/: repositories.bzl
mylang/private/: toolchains_repo.bzl
tools/: BUILD.bazel  linters.bzl  mirror_chainsaw_release.sh  mirror_controller_gen_release.sh  mirror_docker_release.sh  mirror_envtest_releases.sh  mirror_kind_release.sh  mirror_kuttl_release.sh  preset.bazelrc  renovate.sh  transform_envtest_releases.py  workspace_status.sh
