"Bazel dependencies"

module(
    name = "io_github_janhicken_rules_kubebuilder",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_go", version = "0.53.0")

# zlib 1.3.1 fixes a compilation issue for Mac Silicon
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

kubebuilder = use_extension("//kubebuilder:extensions.bzl", "kubebuilder")
kubebuilder.controller_gen()
kubebuilder.envtest()
use_repo(kubebuilder, "controller_gen", "controller_gen_toolchains", "envtest")

register_toolchains("@controller_gen_toolchains//:all")
