"Bazel dependencies"

module(
    name = "io_github_janhicken_rules_kubebuilder",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "bazel_features", version = "1.9.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_go", version = "0.54.0")

# zlib 1.3.1 fixes a compilation issue for darwin_arm64
single_version_override(
    module_name = "zlib",
    version = "1.3.1.bcr.5",
)

bazel_dep(name = "aspect_rules_lint", version = "1.3.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True)
