# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "rules",
    out = "rules.gen.md",
    input = "//kubebuilder:defs.bzl",
    deps = ["//kubebuilder:defs"],
)

write_source_file(
    name = "update",
    diff_test_failure_message = "Docs require an update; please run %s:update" % package_name(),
    in_file = ":rules",
    out_file = "rules.md",
)
