load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

# For stardoc to reference the files
exports_files(["defs.bzl"])

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "controller_gen_toolchain",
)

toolchain_type(
    name = "envtest_toolchain",
)

toolchain_type(
    name = "kind_toolchain",
)

toolchain_type(
    name = "kuttl_toolchain",
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = [
        "//kubebuilder/private:controller_gen_toolchain",
        "//kubebuilder/private:envtest_toolchain",
        "//kubebuilder/private:kind_toolchain",
        "//kubebuilder/private:kuttl_toolchain",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//kubebuilder/private:controller_gen",
        "//kubebuilder/private:envtest",
        "//kubebuilder/private:kind_env",
        "//kubebuilder/private:kubectl",
        "//kubebuilder/private:kuttl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        ":repositories",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
)
