load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@gazelle//:def.bzl", "gazelle")

format_multirun(
    name = "format",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    yaml = "@aspect_rules_lint//format:yamlfmt",
)

gazelle(name = "gazelle")
