load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
        "./.ijwb/*",
        "./e2e/*",
    ],
    lint_mode = "fix",
    lint_warnings = ["all"],
    mode = "fix",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
        "./.ijwb/*",
        "./e2e/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "diff",
)

format_multirun(
    name = "format",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    yaml = "@aspect_rules_lint//format:yamlfmt",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

bzl_library(
    name = "linters",
    srcs = ["linters.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_rules_lint//lint:lint_test",
        "@aspect_rules_lint//lint:shellcheck",
    ],
)
