module(name = "cronjob-tutorial")

# ╔════════════════════════════════════════════════════════════════════════════╗
# ║                                  General                                   ║
# ╚════════════════════════════════════════════════════════════════════════════╝

#bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True)

# ╔════════════════════════════════════════════════════════════════════════════╗
# ║                                     Go                                     ║
# ╚════════════════════════════════════════════════════════════════════════════╝
bazel_dep(name = "rules_go", version = "0.53.0", dev_dependency = True)

# Setup Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.5")

# Setup Go deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = ["gazelle:go_naming_convention go_default_library"],
    path = "github.com/google/cel-go",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/apiserver",
)
use_repo(
    go_deps,
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_robfig_cron",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
)

# ╔════════════════════════════════════════════════════════════════════════════╗
# ║                                Kubebuilder                                 ║
# ╚════════════════════════════════════════════════════════════════════════════╝

bazel_dep(name = "io_github_janhicken_rules_kubebuilder", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "io_github_janhicken_rules_kubebuilder",
    path = "../..",
)

kubebuilder = use_extension("@io_github_janhicken_rules_kubebuilder//kubebuilder:extensions.bzl", "kubebuilder")
kubebuilder.controller_gen(version = "0.17.2")
kubebuilder.envtest(version = "1.31.0")
use_repo(kubebuilder, "controller_gen", "controller_gen_toolchains", "envtest")
