bazel_dep(name = "io_github_janhicken_rules_kubebuilder", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "io_github_janhicken_rules_kubebuilder",
    path = "../..",
)

kubebuilder = use_extension("@io_github_janhicken_rules_kubebuilder//kubebuilder:extensions.bzl", "kubebuilder")
kubebuilder.controller_gen(version = "0.17.2")
kubebuilder.envtest(version = "1.29.0")
use_repo(kubebuilder, "controller_gen", "controller_gen_toolchains", "envtest")
