# Override http_archive for local testing
local_repository(
    name = "io_github_janhicken_rules_kubebuilder",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_kubebuilder setup #
######################
# Fetches the rules_kubebuilder dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@io_github_janhicken_rules_kubebuilder//kubebuilder:repositories.bzl", "rules_kubebuilder_dependencies")

rules_kubebuilder_dependencies()
