load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//kubebuilder:__subpackages__"])

exports_files([
    "apply.sh",
    "expand_stamp_attrs.sh",
])

bzl_library(
    name = "controller_gen",
    srcs = ["controller_gen.bzl"],
    deps = ["@rules_go//go:def"],
)

bzl_library(
    name = "envtest",
    srcs = ["envtest.bzl"],
    deps = ["@rules_go//go:def"],
)

bzl_library(
    name = "envtest_toolchain",
    srcs = ["envtest_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "controller_gen_toolchain",
    srcs = ["controller_gen_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "kubectl",
    srcs = ["kubectl.bzl"],
    deps = [
        "@aspect_bazel_lib//lib:paths",
        "@aspect_bazel_lib//lib:stamping",
    ],
)
