load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//kubebuilder:__subpackages__"])

sh_binary(
    name = "apply",
    srcs = [":apply.sh"],
)

sh_binary(
    name = "expand_stamp_attrs",
    srcs = [":expand_stamp_attrs.sh"],
)

sh_binary(
    name = "kind_env_sh",
    srcs = [":kind_env.sh"],
)

sh_binary(
    name = "kuttl_runner",
    srcs = [":kuttl.sh"],
)

bzl_library(
    name = "controller_gen",
    srcs = ["controller_gen.bzl"],
    deps = ["@rules_go//go:def"],
)

bzl_library(
    name = "envtest",
    srcs = ["envtest.bzl"],
    deps = ["@rules_go//go:def"],
)

bzl_library(
    name = "envtest_toolchain",
    srcs = ["envtest_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "controller_gen_toolchain",
    srcs = ["controller_gen_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "kind_toolchain",
    srcs = ["kind_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "kubectl",
    srcs = ["kubectl.bzl"],
    deps = [
        "@aspect_bazel_lib//lib:paths",
        "@aspect_bazel_lib//lib:stamping",
    ],
)

bzl_library(
    name = "kind_env",
    srcs = ["kind_env.bzl"],
    deps = [
        ":kubectl",
        ":utils",
    ],
)

bzl_library(
    name = "kuttl",
    srcs = ["kuttl.bzl"],
    deps = [":utils"],
)

bzl_library(
    name = "kuttl_toolchain",
    srcs = ["kuttl_toolchain.bzl"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)
