load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//kubebuilder:__subpackages__"])

_RULES_GO_DEFS = [
    # This is actually an undeclared transitive dependency of @rules_go//go:def.
    # It is required for compatbility with Bazel 8.x though.
    # The dependency can be removed once https://github.com/bazel-contrib/rules_go/issues/4394 is fixed.
    "@rules_cc//cc:find_cc_toolchain_bzl",
    "@rules_go//go:def",
]

sh_binary(
    name = "apply",
    srcs = [":apply.sh"],
)

sh_binary(
    name = "configure_kustomization",
    srcs = [":configure_kustomization.sh"],
)

bzl_library(
    name = "controller_gen",
    srcs = ["controller_gen.bzl"],
    deps = _RULES_GO_DEFS,
)

bzl_library(
    name = "controller_gen_toolchain",
    srcs = ["controller_gen_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "envtest",
    srcs = ["envtest.bzl"],
    deps = _RULES_GO_DEFS,
)

bzl_library(
    name = "envtest_toolchain",
    srcs = ["envtest_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "kind_env",
    srcs = ["kind_env.bzl"],
    deps = [
        ":kustomize",
        ":utils",
        "@bazel_skylib//lib:shell",
    ],
)

sh_binary(
    name = "kind_env_sh",
    srcs = [":kind_env.sh"],
)

bzl_library(
    name = "kind_toolchain",
    srcs = ["kind_toolchain.bzl"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "kustomize",
    srcs = ["kustomize.bzl"],
    deps = [
        ":utils",
        "@aspect_bazel_lib//lib:paths",
        "@aspect_bazel_lib//lib:stamping",
        "@bazel_skylib//lib:shell",
    ],
)

bzl_library(
    name = "kuttl",
    srcs = ["kuttl.bzl"],
    deps = [
        ":utils",
        "@bazel_skylib//lib:shell",
    ],
)

sh_binary(
    name = "kuttl_runner",
    srcs = [":kuttl.sh"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
    ],
)

sh_binary(
    name = "chainsaw_test",
    srcs = [
        ":chainsaw_test.sh",
    ],
)

bzl_library(
    name = "chainsaw",
    srcs = ["chainsaw.bzl"],
    deps = [
        ":kind_env",
        ":utils",
        "@bazel_skylib//lib:shell",
    ],
)

bzl_library(
    name = "chainsaw_toolchain",
    srcs = ["chainsaw_toolchain.bzl"],
)

bzl_library(
    name = "docker_toolchain",
    srcs = ["docker_toolchain.bzl"],
)

bzl_library(
    name = "kubectl",
    srcs = ["kubectl.bzl"],
)

bzl_library(
    name = "kuttl_toolchain",
    srcs = ["kuttl_toolchain.bzl"],
)
