load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("//kubebuilder:defs.bzl", "config_map", "generic_secret", "kustomization", "tls_secret")
load("//tools:linters.bzl", "shellcheck_test")

package(default_testonly = True)

shellcheck_test(
    name = "shellcheck",
    size = "small",
    srcs = [
        "//kubebuilder/private:apply",
        "//kubebuilder/private:chainsaw_test",
        "//kubebuilder/private:configure_kustomization",
        "//kubebuilder/private:kind_env_sh",
    ],
)

config_map(
    name = "logging_config",
    srcs = [":logging.properties"],
    config_map_name = "logging",
    namespace = "test",
)

diff_test(
    name = "logging_config_diff",
    file1 = ":logging_config",
    file2 = ":expected_config_map_logging.yaml",
)

kustomization(
    name = "myapp",
    image_tags = {"myapp": "${STABLE_TEST_VERSION}"},
    resources = [":deployment.yaml"],
    stamp = 0,
)

diff_test(
    name = "myapp_diff",
    file1 = ":myapp",
    file2 = ":expected_myapp.yaml",
)

kustomization(
    name = "myapp_versioned",
    image_tags = {"myapp": "${STABLE_TEST_VERSION}"},
    resources = [":deployment.yaml"],
    stamp = 1,
)

diff_test(
    name = "myapp_versioned_diff",
    file1 = ":myapp_versioned",
    file2 = ":expected_myapp_versioned.yaml",
)

tls_secret(
    name = "my_tls_secret",
    cert = ":cert.pem",
    key = ":key.pem",
    secret_name = "my-tls-secret",
)

diff_test(
    name = "my_tls_secret_diff",
    file1 = ":my_tls_secret",
    file2 = ":expected_my_tls_secret.yaml",
)

generic_secret(
    name = "my_secret",
    srcs = [":some_credentials.txt"],
    secret_name = "my-secret",
)

diff_test(
    name = "my_secret_diff",
    file1 = ":my_secret",
    file2 = ":expected_my_secret.yaml",
)

kustomization(
    name = "with_name_suffix",
    name_suffix = "-with-suffix",
    resources = [":deployment.yaml"],
)

diff_test(
    name = "with_name_suffix_diff",
    file1 = ":with_name_suffix",
    file2 = ":expected_name_suffix.yaml",
)
