load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "tutorial.kubebuilder.io/project/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1:api",
        "//internal/controller",
        "//internal/webhook/v1:webhook",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/certwatcher",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/filters",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cmd_static_pure",
    embed = [":cmd_lib"],
    pure = "on",  # no cgo
    static = "on",  # no libc
)

go_cross_binary(
    name = "cmd_linux",
    platform = select({
        "@platforms//cpu:arm64": "//cfg:linux_aarch64",
        "@platforms//cpu:x86_64": "//cfg:linux_x86_64",
    }),
    target = ":cmd_static_pure",
    visibility = ["//visibility:public"],
)
