load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@io_github_janhicken_rules_kubebuilder//kubebuilder:defs.bzl", "controller_gen_objects")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "cronjob_types.go",
        "groupversion_info.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "tutorial.kubebuilder.io/project/api/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)

controller_gen_objects(
    name = "deepcopy.go",
    srcs = [":api"],
    header_file = ":license_header.txt",
    year = 2025,
)

write_source_files(
    name = "generate",
    files = {"zz_generated.deepcopy.go": ":deepcopy.go"},
)
