load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = ["cronjob_controller.go"],
    importpath = "tutorial.kubebuilder.io/project/internal/controller",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:api",
        "@com_github_robfig_cron//:cron",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//tools/reference",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/log",
    ],
)

go_test(
    name = "controller_test",
    size = "small",
    srcs = [
        "cronjob_controller_test.go",
        "suite_test.go",
    ],
    data = [
        "//config/crd/bases",
        "@envtest",
    ],
    embed = [":controller"],
    env = {"KUBEBUILDER_ASSETS": "../../$(rootpath @envtest)"},
    deps = [
        "//api/v1:api",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
