load("@io_github_janhicken_rules_kubebuilder//kubebuilder:defs.bzl", go_test = "envtest_test")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "webhook",
    srcs = ["cronjob_webhook.go"],
    importpath = "tutorial.kubebuilder.io/project/internal/webhook/v1",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:api",
        "@com_github_robfig_cron//:cron",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/util/validation",
        "@io_k8s_apimachinery//pkg/util/validation/field",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission",
    ],
)

go_test(
    name = "webhook_test",
    size = "small",
    srcs = [
        "cronjob_webhook_test.go",
        "webhook_suite_test.go",
    ],
    data = [
        "//config/crd",
        "//config/webhook",
    ],
    embed = [":webhook"],
    tags = ["requires-network"],
    deps = [
        "//api/v1:api",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
    ],
)
